# apate

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
docs/development/: INDEX.md
src/: cargo_info.rs  error.rs  key.rs  lib.rs  main.rs  manifest.rs  pipeline.rs  semantic.rs
src/passes/: dead_code.rs  homoglyph.rs  logic.rs  mod.rs  rename.rs  reorder.rs  strings.rs  strip.rs
src/utils/: ast.rs  crypto.rs  homoglyphs.rs  mod.rs
tests/: determinism.rs  roundtrip.rs
tests/fixtures/: complex.rs  simple.rs  structs.rs
tests/fixtures/multifile/: main.rs  utils.rs
